mock-server2/ai_poc-feature-compliance_final/manifests/qa/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ai-services-qa
  namespace: ai-service
  labels:
    app.kubernetes.io/instance: ai-services-qa
    app.kubernetes.io/name: ai-services-qa
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: ai-services-qa
      app.kubernetes.io/name: ai-services-qa
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: ai-services-qa
        app.kubernetes.io/name: ai-services-qa
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: app.kubernetes.io/name
                    operator: In
                    values:
                      - ai-services-qa
              topologyKey: "kubernetes.io/hostname"
      containers:
        - name: ai-services-qa
          image: IMAGE_VERSION
          ports:
          - containerPort: 8000
