mock-server2/ai_poc-feature-compliance_final/manifests/qa/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ai-services-qa
  labels:
    app.kubernetes.io/instance: ai-services-qa
    app.kubernetes.io/name: ai-services-qa
  annotations:
  namespace: ai-service
spec:
  ports:
    - port: 80
      targetPort: 8000
      protocol: TCP
  type: ClusterIP
  selector:
    app.kubernetes.io/instance: ai-services-qa
    app.kubernetes.io/name: ai-services-qa
